--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,8 +1,10 @@
 pipeline {
     agent any
-    tools {
-        maven 'maven'  // Use the exact name you set in Global Tool Configuration
+
+    tools {  
+        maven 'maven'
     }
+
     stages {
         stage('Build') {
             steps {
@@ -12,6 +14,14 @@ pipeline {
         stage('Test') {
             steps {
                 sh 'mvn test'
+            }
+        }
+        stage('Run JAR') {
+            steps {
+                script {
+                    def output = sh(script: 'java -jar target/simple-java-project-1.0-SNAPSHOT.jar', returnStdout: true).trim()
+                    echo "Output from JAR: ${output}"
+                }
             }
         }
     }
